# pigz

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  LICENSE  Makefile  Makefile.am  NEWS  README  README.md  TODO  bootstrap.conf  configure.ac  pigz.1  pigz.c  pigz.d  pigz.ps  pigz.spec  try.c  try.h  yarn.c  yarn.h
SuperBuild/: External-CHROMIUM-ZLIB.cmake  External-CLOUDFLARE-ZLIB.cmake  External-INTEL-ZLIB.cmake  External-PTHREADS4W.cmake  External-ZLIBng.cmake  SuperBuild.cmake
doc/: pigz.1
lib/: .gitignore  try.h  yarn.h
lib/zopfli/: deflate.c  symbols.c  symbols.h
src/: CMakeLists.txt  Makefile  pigz.c  pigz.spec  tailor.h  ucm.cmake  util.c
src/win/: README.txt  msvc.bat
src/win/dirent/: readme.txt
src/win/lib/: libpthreadVC3.lib  zlib.lib
src/win/thread/: ANNOUNCE  BUGS  Bmakefile  CONTRIBUTORS  ChangeLog  FAQ  GNUmakefile.in  MAINTAINERS  Makefile  NEWS  NOTICE  Nmakefile  Nmakefile.tests  PROGRESS  README  README.CV  README.NONPORTABLE  TODO  WinCE-PORT  _ptw32.h  aclocal.m4  builddmc.bat  cleanup.c  common.mk  config.h  configure.ac  context.h  create.c  dll.c  errno.c  global.c  need_errno.h  pthread.c  pthread.h  pthread_attr_destroy.c  pthread_attr_getaffinity_np.c  pthread_attr_getdetachstate.c  pthread_attr_getinheritsched.c  pthread_attr_getname_np.c  pthread_attr_getschedparam.c  (+138 more)
src/win/thread/manual/: ChangeLog  PortabilityIssues.html  cpu_set.html  index.html  pthreadCancelableWait.html  pthread_attr_init.html  pthread_attr_setstackaddr.html  pthread_attr_setstacksize.html  pthread_barrier_init.html  pthread_barrier_wait.html  pthread_barrierattr_init.html  pthread_barrierattr_setpshared.html  pthread_cancel.html  pthread_cleanup_push.html  pthread_cond_init.html  pthread_condattr_init.html  pthread_condattr_setpshared.html  pthread_create.html  pthread_delay_np.html  pthread_detach.html  pthread_equal.html  pthread_exit.html  pthread_getunique_np.html  pthread_getw32threadhandle_np.html  pthread_join.html  pthread_key_create.html  pthread_kill.html  pthread_mutex_init.html  pthread_mutexattr_setpshared.html  pthread_num_processors_np.html  pthread_once.html  pthread_rwlock_init.html  pthread_rwlock_rdlock.html  pthread_rwlock_timedrdlock.html  pthread_rwlock_timedwrlock.html  pthread_rwlock_unlock.html  pthread_rwlock_wrlock.html  pthread_rwlockattr_init.html  pthread_rwlockattr_setpshared.html  pthread_self.html  (+18 more)
src/win/thread/tests/: Bmakefile  ChangeLog  Debug.dsp  Debug.dsw  Debug.plg  Debug.txt  GNUmakefile.in  Makefile  README  README.BENCHTESTS  Wmakefile  affinity1.c  affinity2.c  affinity3.c  affinity4.c  affinity5.c  affinity6.c  barrier1.c  barrier2.c  barrier3.c  barrier4.c  barrier5.c  barrier6.c  benchlib.c  benchtest.h  benchtest1.c  benchtest2.c  benchtest3.c  benchtest4.c  benchtest5.c  cancel1.c  cancel2.c  cancel3.c  cancel4.c  cancel5.c  cancel6a.c  cancel6d.c  cancel7.c  cancel8.c  cancel9.c  (+135 more)
src/win/zlib/: README.md  zutil.h
src/zopfli/src/zopfli/: deflate.c
zopfli/: zopfli_lib.c
zopfli/src/zopfli/: cache.c  deflate.c  lz77.c
